@@ -8,32 +8,32 @@ diff -Naur deluge-deluge-1.3.15.orig/setup.py deluge-deluge-1.3.15/setup.py
 -    entry_points = entry_points
 +    entry_points = entry_points,
 +    install_requires=[
-+          "Automat==0.6.0",
++          "Automat==0.7.0",
 +          "Mako==1.0.7",
-+          "MarkupSafe==1.0",
-+          "Twisted==17.9.0",
++          "MarkupSafe==1.1.0",
++          "Twisted==18.9.0",
 +          "argparse==1.4.0",
 +          "asn1crypto==0.24.0",
-+          "attrs==17.4.0",
++          "attrs==18.2.0",
 +          "chardet==3.0.4",
 +          "constantly==15.1.0",
-+          "cryptography==2.1.4",
++          "cryptography==2.4.2",
 +          "enum34==1.1.6",
-+          "hyperlink==17.3.1",
-+          "idna==2.6",
++          "hyperlink==18.0.0",
++          "idna==2.8",
 +          "incremental==17.5.0",
-+          "ipaddress==1.0.19",
++          "ipaddress==1.0.22",
 +          "linecache2==1.0.0",
-+          "pyOpenSSL==17.5.0",
-+          "pyasn1-modules==0.2.1",
-+          "pyasn1==0.4.2",
-+          "python-gettext==3.0",
-+          "pyxdg==0.25",
-+          "service_identity==17.0.0",
-+          "setuptools==38.2.5",
-+          "six==1.11.0",
++          "pyOpenSSL==18.0.0",
++          "pyasn1-modules==0.2.2",
++          "pyasn1==0.4.5",
++          "python-gettext==4.0",
++          "pyxdg==0.26",
++          "service_identity==18.1.0",
++          "setuptools==40.6.3",
++          "six==1.12.0",
 +          "traceback2==1.4.0",
 +          "unittest2==1.1.0",
-+          "zope.interface==4.4.3",
++          "zope.interface==4.6.0",
 +    ],
  )
