@@ -1,3 +1,7 @@
+26
+- Update Python dependencies
+- Update libtorrent-rasterbar to 1.1.11
+
 25
 - Update Python dependencies
 - Update boost to 1.66.0
